--- a/views/admin/clientsNcustomers/edit_client.hbs
+++ b/views/admin/clientsNcustomers/edit_client.hbs
@@ -21,6 +21,20 @@
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="../css/styles_dashboard.css">
+
+    <style>
+        .login_oueter {
+            width: 360px;
+            max-width: 100%;
+        }
+        .logo_outer{
+            text-align: center;
+        }
+        .logo_outer img{
+            width:120px;
+            margin-bottom: 40px;
+        }
+    </style>
 </head>
 
 <body>
@@ -114,16 +128,24 @@
             <!-- dashboard -->
             
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-5">
-                <div class="row pt-3 pb-2 mb-3 border-bottom">
-                    <div class="col mb-2">
-                        <a class="btn btn-primary" href="/admin/clients"><i class="fa-solid fa-chevron-left"></i> Atras</a>
+                <div class="container-fluid px-0">
+                    <div class="row pt-3 pb-2 mb-3 border-bottom">
+                        <div class="col mb-2">
+                            <a class="btn btn-primary" href="/admin/clients"><i class="fa-solid fa-chevron-left"></i> Atras</a>
+                        </div>
+                        <div class="col text-center">
+                            <h2>Detalles del Cliente</h2>
+                        </div>
+                        <div class="col text-end">
+                            <a class="btn btn-danger" href="/admin/delete_client/{{client.id}}"><i class="fa-regular fa-trash-can"></i> Eliminar Cliente</a>
+                        </div>
                     </div>
-                    <div class="col text-center">
-                        <h2>Detalles del Cliente</h2>
-                    </div>
-                    <div class="col text-end">
-                        <a class="btn btn-danger" href="/links/add"><i class="fa-regular fa-trash-can"></i> Eliminar Cliente</a>
-                    </div>
+                    {{#if message}}
+                        <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
+                            {{message}}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {{/if}}
                 </div>
                 
                 <div class="container p-4">
@@ -131,7 +153,7 @@
                         <div class="col-md-4 mx-auto">
                             <div class="card">
                                 <div class="card-body">
-                                    <form action="/admin/edit_client/{{id}}" method="POST">
+                                    <form action="/admin/edit_client/{{client.id}}" method="POST">
                                         <div class="form-group pb-3">
                                             <!-- {{!-- <input type="number" name="id" class="form-control" placeholder="ID" autofocus
                                                                                                 readonly> --}} -->
@@ -139,7 +161,7 @@
                                         </div>
                                         <div class="form-group pb-3">
                                             <label class="" for="">email</label>
-                                            <input type="email" name="name" class="form-control" placeholder="Email" maxlength="30" value="{{client.email}}">
+                                            <input type="email" name="email" class="form-control" placeholder="Email" maxlength="30" value="{{client.email}}">
                                         </div>
                                         <div class="form-group pb-3">
                                             <label class="" for="">Nombre(s)</label>
@@ -147,12 +169,18 @@
                                         </div>
                                         <div class="form-group pb-3">
                                             <label class="" for="">Apellido(s)</label>
-                                            <input type="text" name="name" class="form-control" placeholder="Apellidos" maxlength="30" value="{{client.last_name}}">
+                                            <input type="text" name="last_name" class="form-control" placeholder="Apellidos" maxlength="30" value="{{client.last_name}}">
                                         </div>
                                         <div class="form-group pb-3">
                                             <h3>Resetear Contraseña</h3>
                                             <label class="" for="">Nueva Contraseña</label>
-                                            <input type="text" name="name" class="form-control" placeholder="Escriba la nueva Contraseña" maxlength="30">
+                                            <div class="input-group">
+                                            <input type="password" id="password" name="reset_password" class="form-control" placeholder="Escriba la nueva Contraseña" maxlength="30">
+                                                <span class="input-group-text" onclick="password_show_hide();">
+                                                <i class="fas fa-eye" id="show_eye"></i>
+                                                <i class="fas fa-eye-slash d-none" id="hide_eye"></i>
+                                                </span>
+                                            </div>
                                         </div>
                                         
                                         <div class="form-group text-center">
@@ -179,6 +207,7 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 
+    <script src="/js/edit_employee.js"></script>
 </body>
 
 </html>
