product page available, next work - print the information

--- a/views/admin/a_home.hbs
+++ b/views/admin/a_home.hbs
@@ -49,7 +49,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./products.html" class="nav-link link-dark">
+                            <a href="/admin/products" class="nav-link link-dark">
                                 <i class="fa-solid fa-cart-shopping"></i>
                                 Productos
                             </a>
