--- a/views/admin/products/products.hbs
+++ b/views/admin/products/products.hbs
@@ -111,7 +111,7 @@
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">Productos</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
-                        <a class="btn btn-success" href="/links/add">Añadir Producto <i class="fa-solid fa-plus"></i></a>
+                        <a class="btn btn-success" href="/admin/add_product">Añadir Producto <i class="fa-solid fa-plus"></i></a>
                     </div>
                 </div>
 
@@ -138,7 +138,7 @@
                                 </td>
                                 <td class="total align-middle fw-semi-bold text-1000">95 Bs.</td>
                                 <td><span class="badge text-bg-light">Electronica</span> <span class="badge text-bg-light">Electronica</span></td>
-                                <td class="date align-middle white-space-nowrap text-700 "><span class=h2">45</span> unidades</td>
+                                <td class="date align-middle white-space-nowrap text-700 "><span class="h2">45</span> unidades</td>
                             </tr>
                             <tr class="">
                                 <td class="order align-middle white-space-nowrap">23</td>
