--- a/views/admin/products/add_product.hbs
+++ b/views/admin/products/add_product.hbs
@@ -114,19 +114,25 @@
             <!-- dashboard -->
             
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-5">
-                <div class="row pt-3 pb-2 mb-3 border-bottom">
-                    <div class="col mb-2">
-                        <a class="btn btn-primary" href="/links/add"><i class="fa-solid fa-chevron-left"></i> Atras</a>
+                <div class="container-fluid px-0">
+                    <div class="row pt-3 pb-2 mb-3 border-bottom">
+                        <div class="col mb-2">
+                            <a class="btn btn-primary" href="/links/add"><i class="fa-solid fa-chevron-left"></i> Atras</a>
+                        </div>
+                        <div class="col text-center">
+                            <h2>Añadir Nuevo Producto</h2>
+                        </div>
+                        <div class="col">
+                
+                        </div>
                     </div>
-                    <div class="col text-center">
-                        <h2>Añadir Nuevo Producto</h2>
-                    </div>
-                    <div class="col">
-            
-                    </div>
+                    {{#if message}}
+                        <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
+                            {{message}}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {{/if}}
                 </div>
-            
-            
             
                 <div class="container p-4">
                     <div class="row">
