--- a/views/admin/products/products.hbs
+++ b/views/admin/products/products.hbs
@@ -147,8 +147,10 @@
                                 </td>
                                 <td class="total align-middle fw-semi-bold text-1000">{{price}}</td>
                                 <td>
-                                    <span class="badge text-bg-light">Electronica</span> 
-                                    <span class="badge text-bg-light">Electronica</span>
+                                    {{#each categories}}
+                                        <span class="badge text-bg-light">{{this}}</span>                                         
+                                    {{/each}}
+                                    {{!-- <span class="badge text-bg-light">Electronica</span> --}}
                                 </td>
                                 <td class="date align-middle white-space-nowrap text-700 "><span class="h5">{{stock}}</span> unidades</td>
                             </tr>
