displaying categories of a specific product in the edit_product/id page

--- a/views/admin/products/products.hbs
+++ b/views/admin/products/products.hbs
@@ -141,7 +141,7 @@
                             <tr class="">
                                 <td class="order align-middle white-space-nowrap">{{id}}</td>
                                 <td class="align-middle white-space-nowrap ps-8">
-                                    <a class=" align-items-center" href="#">
+                                    <a class=" align-items-center" href="/admin/edit_product/{{id}}">
                                         <h6 class="mb-0 text-900">{{name}}</h6>
                                     </a>
                                 </td>
