--- a/views/admin/products/edit_product.hbs
+++ b/views/admin/products/edit_product.hbs
@@ -114,90 +114,95 @@
             <!-- dashboard -->
             
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-5">
-                <div class="row pt-3 pb-2 mb-3 border-bottom">
-                    <div class="col mb-2">
-                        <a class="btn btn-primary" href="/links/add"><i class="fa-solid fa-chevron-left"></i> Atras</a>
-                    </div>
-                    <div class="col text-center">
-                        <h2>Detalles Producto</h2>
-                    </div>
-                    <div class="col text-end">
-                        <a class="btn btn-danger" href="/links/add"><i class="fa-regular fa-trash-can"></i> Eliminar Producto</a>
-                    </div>
-                </div>
+                <div class="container-fluid px-0">
+                    <div class="row pt-3 pb-2 mb-3 border-bottom">
+                        <div class="col mb-2">
+                            <a class="btn btn-primary" href="/links/add"><i class="fa-solid fa-chevron-left"></i> Atras</a>
+                        </div>
+                        <div class="col text-center">
+                            <h2>Añadir Nuevo Producto</h2>
+                        </div>
+                        <div class="col">
                 
+                        </div>
+                    </div>
+                    {{#if message}}
+                        <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
+                            {{message}}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {{/if}}
+                </div>
+            
                 <div class="container p-4">
                     <div class="row">
                         <div class="col-md-4 mx-auto">
                             <div class="card">
                                 <div class="card-body">
-                                    <form action="/links/add" method="POST">
+                                    <form action="/admin/edit_product/{{product.id}}" method="POST">
                                         <div class="pb-3">
-                                            <label class="form-label" for="customFile">Cambiar Imagen</label>
-                                            <input type="file" class="form-control" id="image" name="image" />
+                                            <label class="form-label" for="customFile">Subir Imagen</label>
+                                            <input type="file" class="form-control" id="image" name="image"/>
                                         </div>
-                                        <div class="form-group pb-3">
+                                        <div class="form-group pb-1">
                                             <!-- {{!-- <input type="number" name="id" class="form-control" placeholder="ID" autofocus
-                                                                                                readonly> --}} -->
-                                            <input type="number" name="id" class="form-control" placeholder="ID" value="{{next_id}}" autofocus readonly>
+                                                            readonly> --}} -->
+                                            {{!-- <input type="number" name="id" class="form-control" placeholder="ID" value=""
+                                                autofocus readonly> --}}
                                         </div>
                                         <div class="form-group pb-3">
-                                            <label class="" for="">Nombre</label>
-                                            <input type="text" name="name" class="form-control" placeholder="Nombre" maxlength="30">
+                                            <label class="" for="">Nombre del Producto</label>
+                                            <input type="text" name="product_name" class="form-control" placeholder="Nombre" maxlength="30" value="{{product.name}}">
                                         </div>
                                         <div class="form-group pb-3 ">
                                             <label class="" for="">Precio</label>
-                                            <input type="text" name="price" class="form-control" placeholder="Precio" value="1" min="1">
+                                            <input type="text" name="price" class="form-control" placeholder="Precio" value="{{product.price}}"
+                                                min="1">
                                             <!-- {{!-- <textarea name="description" rows="2" class="form-control"
-                                                                                                placeholder="Description"></textarea> --}} -->
+                                                            placeholder="Description"></textarea> --}} -->
                                         </div>
                                         <div class="form-group pb-3">
                                             <label for="">Stock</label>
-                                            <input type="number" name="stock" class="form-control" placeholder="Stock" value="1" min="1">
+                                            <input type="number" name="stock" class="form-control" placeholder="Stock" value="{{product.stock}}"
+                                                min="1">
                                         </div>
                                         <div class="form-group pb-3">
-                                            <label class="form-check-label" for="">Categoria</label>
+                                            <label class="form-check-label" for="">Categorias</label>
                                             <div class="accordion" id="accordionExample">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header" id="headingOne">
-                                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                                            data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"> Seleccionar
-                                                            Categorias </button>
+                                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                                                            aria-expanded="false" aria-controls="collapseOne"> Seleccionar Categorias </button>
                                                     </h2>
                                                     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                                                         data-bs-parent="#accordionExample">
                                                         <div class="accordion-body p-0">
                                                             <ul class="list-group p-0 m-0">
-                                                                <li class="list-group-item"><span class="me-auto">
+                                                                {{#each product_categories}}
+                                                                
+                                                                    <li class="list-group-item"><span class="me-auto">
                                                                         <div class="row">
-                                                                            <div class="col">Electronica</div>
-                                                                            <div class="col text-end"><input class="form-check-input" type="checkbox"
-                                                                                    name="electronica" value="ELC"></div>
+                                                                            <div class="col">{{name}}</div>
+                                                                            <div class="col text-end"><input class="form-check-input" type="checkbox" name="categories" value="{{id}}" {{#if checked}}checked{{/if}}></div>
                                                                         </div>
-                                                                </li>
-                                                                <li class="list-group-item"><span class="me-auto">
-                                                                        <div class="row">
-                                                                            <div class="col">Electronica</div>
-                                                                            <div class="col text-end"><input class="form-check-input" type="checkbox"
-                                                                                    name="electronica" value="ELCz"></div>
-                                                                        </div>
-                                                                </li>
+                                                                    </li>
+                                                                {{/each}}
                                                             </ul>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div>  
                                         <div class="form-group text-center">
                                             <a href="/list_items" class="btn btn-secondary me-3"><span>Cancelar</span></a>
-                                            <button href="/links/delete/{{id}}" type="submit" class="btn btn-success"><span>Guardar Cambios </span> <i
+                                            <button type="submit" class="btn btn-success" ><span>Guardar</span> <i
                                                     class="fa-regular fa-floppy-disk"></i></button>
                                         </div>
                                     </form>
                                 </div>
                             </div>
                         </div>
-                
+            
                     </div>
                 </div>
             </main>
