creating a new menu page for the categories and displaying the existing categories on the table 🖨️🖨️🖨️

--- a/views/admin/a_home.hbs
+++ b/views/admin/a_home.hbs
@@ -55,6 +55,12 @@
                             </a>
                         </li>
                         <li>
+                            <a href="/admin/categories" class="nav-link link-dark">
+                                <i class="fa-solid fa-tag"></i>
+                                Categorias
+                            </a>
+                        </li>
+                        <li>
                             <a href="/admin/clients" class="nav-link link-dark">
                                 <i class="fa-solid fa-users"></i>
                                 Clientes
