--- a/views/admin/products/edit_product.hbs
+++ b/views/admin/products/edit_product.hbs
@@ -156,7 +156,7 @@
                                         </div>
                                         <div class="form-group pb-3 ">
                                             <label class="" for="">Precio</label>
-                                            <input type="text" name="price" class="form-control" placeholder="Precio" value="{{product.price}}"
+                                            <input type="number" name="price" class="form-control" placeholder="0.00" min="0" step="0.01" value="{{product.price}}"
                                                 min="1">
                                             <!-- {{!-- <textarea name="description" rows="2" class="form-control"
                                                             placeholder="Description"></textarea> --}} -->
