creating delete button for product/id and working

--- a/views/admin/products/edit_product.hbs
+++ b/views/admin/products/edit_product.hbs
@@ -122,8 +122,8 @@
                         <div class="col text-center">
                             <h2>Añadir Nuevo Producto</h2>
                         </div>
-                        <div class="col">
-                
+                        <div class="col text-end">
+                            <a class="btn btn-danger" href="/admin/delete_product/{{product.id}}"><i class="fa-regular fa-trash-can"></i> Eliminar Producto</a>
                         </div>
                     </div>
                     {{#if message}}
