--- a/views/admin/products/categories.hbs
+++ b/views/admin/products/categories.hbs
@@ -112,7 +112,7 @@
                     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                         <h1 class="h2">Categorias</h1>
                         <div class="btn-toolbar mb-2 mb-md-0">
-                            <a class="btn btn-success" href="/admin/add_product">Añadir Categoria <i class="fa-solid fa-plus"></i></a>
+                            <a class="btn btn-success" href="/admin/add_category">Añadir Categoria <i class="fa-solid fa-plus"></i></a>
                         </div>
                     </div>
                     {{#if message}}
@@ -125,7 +125,7 @@
 
                 <h2>Categorias Registradas</h2>
                 <div class="table-sm-responsive mt-4">
-                {{#if categories}}
+                    {{#if categories}}
                     <table class="table table-hover table-bordered">
                         <thead>
                             <tr>
