--- a/views/admin/products/categories.hbs
+++ b/views/admin/products/categories.hbs
@@ -139,7 +139,7 @@
                             <tr class="">
                                 <td class="order align-middle white-space-nowrap">{{id}}</td>
                                 <td class="align-middle white-space-nowrap ps-8">
-                                    <a class=" align-items-center" href="/admin/edit_product/{{id}}">
+                                    <a class=" align-items-center" href="/admin/edit_category/{{id}}">
                                         <h6 class="mb-0 text-900">{{name}}</h6>
                                     </a>
                                 </td>
