--- a/views/admin/products/products.hbs
+++ b/views/admin/products/products.hbs
@@ -140,6 +140,7 @@
                         {{#each products}}
                             <tr class="">
                                 <td class="order align-middle white-space-nowrap">{{id}}</td>
+                                <td class="order align-middle white-space-nowrap"><img src="{{img_dir}}" alt="img" width="50" ></td>
                                 <td class="align-middle white-space-nowrap ps-8">
                                     <a class=" align-items-center" href="/admin/edit_product/{{id}}">
                                         <h6 class="mb-0 text-900">{{name}}</h6>
