uploading images working for add_product page post 🖼️🖼️🖼️

--- a/views/admin/products/add_product.hbs
+++ b/views/admin/products/add_product.hbs
@@ -139,7 +139,7 @@
                         <div class="col-md-4 mx-auto">
                             <div class="card">
                                 <div class="card-body">
-                                    <form action="/admin/add_product" method="POST">
+                                    <form action="/admin/add_product" method="POST" enctype="multipart/form-data">
                                         <div class="pb-3">
                                             <label class="form-label" for="customFile">Subir Imagen</label>
                                             <input type="file" class="form-control" id="image" name="image"/>
