--- a/views/admin/products/edit_product.hbs
+++ b/views/admin/products/edit_product.hbs
@@ -138,10 +138,11 @@
                     <div class="row">
                         <div class="col-md-4 mx-auto">
                             <div class="card">
+                                <img src="{{product.img_dir}}" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <form action="/admin/edit_product/{{product.id}}" method="POST">
                                         <div class="pb-3">
-                                            <label class="form-label" for="customFile">Subir Imagen</label>
+                                            <label class="form-label" for="customFile">Cambiar Imagen</label>
                                             <input type="file" class="form-control" id="image" name="image"/>
                                         </div>
                                         <div class="form-group pb-1">
