displaying a single product from the marketplace

--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -19,7 +19,7 @@
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="../css/styles_market.css">
+    <link rel="stylesheet" href="/css/styles_market.css">
 
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -104,7 +104,7 @@
                             </form>
                         </div>
                         <div class="col col-4 text-end">
-                            <a class="btn btn-primary" href="cart_sopping.html" role="button"><i class="fa-solid fa-cart-shopping"></i> <span class="sopping-cart-text">Carrito</span></a>
+                            <a class="btn btn-primary" href="/marketplace/cart_shopping" role="button"><i class="fa-solid fa-cart-shopping"></i> <span class="sopping-cart-text">Carrito</span></a>
                         </div>
                     </div>
                 </div>
@@ -164,9 +164,9 @@
                             {{#each products}}
                                 <div class="col col-12 col-md-6 col-xl-4 mb-0 mb-lg-4 mt-5 mt-lg-0">
                                     <div class="card">
-                                        <a href=""><img src="{{img_dir}}" class="card-img-top" alt="..."></a>
+                                        <a href="/marketplace/product/{{id}}"><img src="{{img_dir}}" class="card-img-top" alt="..."></a>
                                         <div class="card-body">
-                                            <a href=""><h5 class="card-title">{{name}}</h5></a>
+                                            <a href="/marketplace/product/{{id}}"><h5 class="card-title">{{name}}</h5></a>
                                             <p class="card-text">{{price}}</p>
                                             <a href="#" class="btn btn-primary w-100"><i class="fa-solid fa-cart-plus"></i> <span>Añadir al carrito</span></a>
                                         </div>
